--- a/scheduling_problem.tex
+++ b/scheduling_problem.tex
@@ -51,7 +51,25 @@
 \end{enumerate}
 
 \indent \textbf{Теорема.} LPTR - имеет коэффициент аппроксимации $\frac{4}{3}$ для задачи об оптимальном расписании, 
-то есть $ \text{LPTR} (s) \leq \frac{4}{3} \text{OPT} (s) \quad \forall s$ - входные данные , $\text{OPT} (s)$ - оптимальное решение. 
+то есть $ \text{LPTR} (x) \leq \frac{4}{3} \text{OPT} (x) \quad \forall x$ - входные данные , $\text{OPT} (x)$ - оптимальное решение. \\
+\indent $\triangleright$ 
+                Пусть $S$ - расписание, результат работы \textbf{LPTR} алгоритма, $w(S)$ - время окончания работ. Пусть $l$ - работа, которая завершится последней. Можно считать, что $l$ - это номер последней работы. Если это не так,
+                то докажем для $J' = \{1 \cdots l\}$. Тогда для новой и исходной задачи алгоритм выдаст расписание с одним и тем же временем окончания работы, то есть $w(S') = w(S)$, в то время как оптимальное время в исходной задаче может быть только больше либо равно оптимальному времени в новой задаче ($\text{OPT} \geq \text{OPT}'$). Значит, доказав аппроксимацию для работы на $J'$, автоматически докажем и для работы на $J$. \\
+
+                Пусть $t_l$ - время начала выполнения работы $l$. Тогда в этот момент времени все машины заняты (одна или несколько могли освободиться в данный момент), иначе если какая-то машина была свободна, то  $t_l$ было бы меньше (в момент времени $t = 0$ все машины считаются занятыми). Значит все время $t_l$ все $m$ машин работали непрерывно: 
+                \begin{equation}
+                    t_l \leq (\sum_{j \in M} p_j - p_l)/m \leq \text{OPT} - \frac{p_l}{m}
+                \end{equation}
+
+                \begin{equation}
+                    w(S') = t_l + p_l \leq \text{OPT} + p_l (1 - \frac{1}{m}) 
+                \end{equation}
+
+                \textbf{Лемма.} Если $p_{\min} > \frac{\text{OPT}}{3}$, то $w(S) = OPT$. \\
+                \indent \itshape{Доказательство леммы.} 
+
+        $\triangleleft$
+
 
 
 \end{document}
