--- a/scheduling_problem.tex
+++ b/scheduling_problem.tex
@@ -1,3 +1,4 @@
+
 \documentclass[10pt]{article}
 % Эта строка — комментарий, она не будет показана в выходном файле
 \usepackage{ucs}
@@ -20,7 +21,7 @@
 % \textwidth=180mm    
 % \oddsidemargin=-10mm 
 
-\title{Задача об оптимальном рассписании}
+\title{Задача об оптимальном расписании (Scheduling Problem)}
 \author{Зотов Алексей, 497}
 \date{\today}
 
@@ -39,9 +40,38 @@
 \\
 \\
 \paragraph{\Large{$\mathbf{NP}$ - полнота\\\\}}
-\indent \textbf{Теорема.} Задача об оптимальном расписании является $\mathbf{NP}$ - полной.
-\\
-\\
+\indent \textbf{Теорема.} Задача об оптимальном расписании является $\mathbf{NP}$ - полной. \\
+Здесь рассматривается измененный вариант задачи:
+\begin{equation}
+     \max_{j \in M} \sum_{i} x_{ij} p_{ij} \leq k
+\end{equation} \\
+{\itshape Доказательство.}
+\begin{enumerate}
+    \item \textbf{SCHEDULING} $\in$ \textbf{NP} \\
+    \indent Действительно, сертификатом будет являться значения функции $x$ на множестве $J$. Полиномиально вычисляется искомый функционал.
+    \item Рассмотрим  задачу \textbf{SUBSETSUM}. \\
+    Дано множество $A$, определена весовая функция $s : A \to \mathbb{N}$ на элементах множества. Необходимо найти подмножество
+    $A'\subseteq A$, такое что $\sum_{a \in A'} s(a) = \sum_{a \in A\backslash A'} s(a)$. \\
+    Легко свести данную задачу к задаче о расписании, взяв $J = A$ - множество элементов как множество работ, $M = \{1,2\}$ - два подмножества в задаче о разбиении как две машины, $p_{ij} = s(a_i)$ - вес элемента как сложность выполнения работы и $k = 0$, так как нам нужно точное разбиение. Тогда, решив задачу о расписании, мы получим решение задачи о разбиении. \\
+    Покажем теперь, что \textbf{SUBSETSUM} \textbf{NP} - трудна, что завершит доказательство теоремы. \\ \\ 
+    \textbf{Утверждение.} \textbf{SUBSETSUM} $\in$ \textbf{NPH}. \\
+    {\itshape Доказательство утверждения.} Сведем \textbf{NP} полную задачу о покрытии ребрами 3-дольного 3-однородного гиперграфаграфа 
+    (\textbf{3-dimensional matching , 3DM}) к задаче \textbf{SUBSETSUM}. \\ Пусть $W = \{w_1,\dots w_q\},X=\{x_1,\dots x_q\},Y=\{y_1,\dots y_q\}$ , $V = W \cup X \cup Y$- вершины и $M \subseteq W \times X \times Y$, $|M| = k$ - ребра гиперграфа из задачи \textbf{3DM}.\\
+    Будем считать, что $\forall v \in V \exists e \in M: v \in e$, то есть для каждой вершины существует ребро, которое ее содержит. Если это не так, то ответ на задачу отрицательный, и это можно вычислить за полиномиальное время. \\
+    Требуется построить множество $A$ и размеры $s(a)$ всех его элементов так, чтобы было выполнено: 
+    \begin{equation}
+        \exists A' \in A \sum_{a \in A'} s(a) = \sum_{a \in A \backslash A} s(a) \
+        \iff \exists J \subseteq \{1\dots k\}, m_{j} \in M, j \in J : \bigsqcup_{J} m_j = V
+    \end{equation}
+    то есть, что в $A$ можно найти подмножество, равное по весу своему дополнению, тогда и только тогда, когда $M$ содержит искомое покрытие. \\
+    Множество $A$ будет состоять из $k+2$ элементов. Первые $k$ элементов множества $A$ будут $\{ a_i: 1 \leq i \leq k\}$, вес элемента $s(a_i)$ будет определеяться по $m_i$. Построим двоичную запись числа $s(a_i)$ по $m_i = (w_{f(i)},x_{g(i)},y_{h(i)})$. Для записи $s(a_i)$ будем использовать ровно $3qp$ бит, где $p = \lceil \log_2{(k+1)} \rceil$. Каждой из трех компонент $m_i$ соответствует один подотрезок длины $qp$ в двоичной записи числа $s(a_i)$, который состоит из $q$ блоков длины $p$, каждый блок соответствует своему $1 \leq i \leq q$. В числе $s(a_i)$ правые концы зон, соответствующих $w_{f(i)}, x_{g(i)}, y_{h(i)}$ равны 1, остальные биты равны 0:
+
+    \begin{equation}
+        s(a_i) = 2^{p(3q - f(i))} + 2^{p(2q - g(i))} + 2^{p(q - h(i))}
+    \end{equation}
+
+
+\end{enumerate}
 \paragraph{\Large{Полиномиальное приближение\\\\}}
 \indent Найдем приближенное полиномиальное частного случай задачи об оптимальном рассписании, когда мощности всех машин одинаковы, то есть $p_{ij} = p_i$. \\ \\ 
 Рассмотрим алгоритм \textbf{LPTR} (Longest Processing Time Rule): \\
@@ -52,7 +82,7 @@
 
 \indent \textbf{Теорема.} LPTR - имеет коэффициент аппроксимации $\frac{4}{3}$ для задачи об оптимальном расписании, 
 то есть $ \text{LPTR} (x) \leq \frac{4}{3} \text{OPT} (x) \quad \forall x$ - входные данные , $\text{OPT} (x)$ - оптимальное решение. \\
-\indent $\triangleright$ 
+\indent $\triangleleft$ 
                 Пусть $S$ - расписание, результат работы \textbf{LPTR} алгоритма, $w(S)$ - время окончания работ. Пусть $l$ - работа, которая завершится последней. Можно считать, что $l$ - это номер последней работы. Если это не так,
                 то докажем для $J' = \{1 \cdots l\}$. Тогда для новой и исходной задачи алгоритм выдаст расписание с одним и тем же временем окончания работы, то есть $w(S') = w(S)$, в то время как оптимальное время в исходной задаче может быть только больше либо равно оптимальному времени в новой задаче ($\text{OPT} \geq \text{OPT}'$). Значит, доказав аппроксимацию для работы на $J'$, автоматически докажем и для работы на $J$. \\
 
@@ -61,15 +91,20 @@
                     t_l \leq (\sum_{j \in M} p_j - p_l)/m \leq \text{OPT} - \frac{p_l}{m}
                 \end{equation}
 
-                \begin{equation}
-                    w(S') = t_l + p_l \leq \text{OPT} + p_l (1 - \frac{1}{m}) 
+                \begin{equation} \label{eq:estimation}
+                    w(S) = t_l + p_l \leq \text{OPT} + p_l (1 - \frac{1}{m}) 
                 \end{equation}
 
                 \textbf{Лемма.} Если $p_{\min} > \frac{\text{OPT}}{3}$, то $w(S) = OPT$. \\
-                \indent \itshape{Доказательство леммы.} 
+                \indent {\itshape{Доказательство леммы.}} В условиях леммы в оптимальном расписании будет не более двух задач на одной машине. Покажем что LPTR алгоритм также не назначит более двух задач на одну машину. Всего работ не более чем $2m$. Предположим в $S$ на какой-то машине не менее 3х работ. Пусть $k$ - первая работа которая стала 3-ей на какой-то машине. Тогда есть и работа $j$, которая единственна на своей машине в $S$  
+                и не единственна в оптимальном. Заметим, что в LPTR $j$ будет рассмотрена раньше $k$ , иначе $k$ была бы распределена на свободную машину. Тогда $p_j < 2 \text{OPT} /3 $. С другой стороны, $p_j > 2 p_{\min} > 2 \text{OPT}/3$, иначе работа $k$ могла бы быть распределена на машину к работе $j$. Значит $LPTR$ назначает не более двух работ на машину. Можно найти такое оптимальное расписание $S_2$, что $a_i \geq a_j \quad i \leq j$ и $b_i \leq b_j \quad i \leq j$, где $a_i$ и $b_i$ - время обработки первой и второй работ соответственно на $i$-ой машине. Именно такое расписание и выдаст LPTR алгоритм.
 
-        $\triangleleft$
-
-
+                {\itshape Завершим доказательство теоремы.} \\
+                Если $p_{\min} > \frac{\text{OPT}}{3}$, то $S$ - оптимальное расписание. Иначе $p_l \leq \frac{\text{OPT}}{3}$ 
+                и по (\ref{eq:estimation}) получаем :
+                \begin{equation}
+                    w(S) \leq \text{OPT} + \frac{\text{OPT}}{3} (1 - \frac{1}{m}) \leq \frac{4}{3} \text{OPT}
+                \end{equation}
+                Что завершает доказательство. $\triangleright$
 
 \end{document}
