add NP-completness theorem proving

--- a/scheduling_problem.tex
+++ b/scheduling_problem.tex
@@ -60,20 +60,55 @@
     Будем считать, что $\forall v \in V \exists e \in M: v \in e$, то есть для каждой вершины существует ребро, которое ее содержит. Если это не так, то ответ на задачу отрицательный, и это можно вычислить за полиномиальное время. \\
     Требуется построить множество $A$ и размеры $s(a)$ всех его элементов так, чтобы было выполнено: 
     \begin{equation}
-        \exists A' \in A \sum_{a \in A'} s(a) = \sum_{a \in A \backslash A} s(a) \
+        \exists A' \in A \sum_{a \in A'} s(a) = \sum_{a \in A' \backslash A} s(a) \
         \iff \exists J \subseteq \{1\dots k\}, m_{j} \in M, j \in J : \bigsqcup_{J} m_j = V
     \end{equation}
     то есть, что в $A$ можно найти подмножество, равное по весу своему дополнению, тогда и только тогда, когда $M$ содержит искомое покрытие. \\
     Множество $A$ будет состоять из $k+2$ элементов. Первые $k$ элементов множества $A$ будут $\{ a_i: 1 \leq i \leq k\}$, вес элемента $s(a_i)$ будет определеяться по $m_i$. Построим двоичную запись числа $s(a_i)$ по $m_i = (w_{f(i)},x_{g(i)},y_{h(i)})$. Для записи $s(a_i)$ будем использовать ровно $3qp$ бит, где $p = \lceil \log_2{(k+1)} \rceil$. Каждой из трех компонент $m_i$ соответствует один подотрезок длины $qp$ в двоичной записи числа $s(a_i)$, который состоит из $q$ блоков длины $p$, каждый блок соответствует своему $1 \leq i \leq q$. В числе $s(a_i)$ правые концы зон, соответствующих $w_{f(i)}, x_{g(i)}, y_{h(i)}$ равны 1, остальные биты равны 0:
-
     \begin{equation}
         s(a_i) = 2^{p(3q - f(i))} + 2^{p(2q - g(i))} + 2^{p(q - h(i))}
     \end{equation}
 
+    $s(a_i)$ имеет длину не больше $3pq$, и может быть построено за полиномиальное время.
+    \begin{center}
+        \includegraphics[height=2cm]{img1.png} \\ $s(a_i)$
+    \end{center}
+    Заметим, что если просуммировать содержимое одной зоны всех элементов множества $\{a_i: 1 \leq i \leq k\}$, то результат не будет превосходить $2^p - 1$. Следовательно, при суммировании по любому подмножеству, никогда не придется переносить единицы из одной зоны($p$ бит) в соседнюю. \\
+    Положим :
+    \begin{equation}
+        B = \sum^{3q-1}_{j=0} 2^{pj}
+    \end{equation}
+    $B$ - число, в двоичной записи которого в правом конце каждой зоны стоит 1. Тогда для любого подмножества 
+    $A' \subseteq \{a_i: 1 \leq i \leq k\}$, соотношение: 
+    \begin{equation}
+        \sum_{a \in A'} s(a) = B
+    \end{equation}
+    выполняется тогда и только тогда $M' = \{m_i :a_i \in A'\}$ - решение \textbf{3DM}.
+    Последние два элемента $b_1$ и $b_2$ множества $A$ такие, что выполнено:
+    \begin{equation}
+        s(b_1) = 2 \left( \sum^{k}_{i=1}s(a_i) \right) - B
+    \end{equation}
+    \begin{equation}
+        s(b_2) = \left( \sum^{k}_{i=1}s(a_i) \right) + B
+    \end{equation}
+    Двоичные записи $s(b_1)$ и $s(b_2)$ имеют длину не более $3pq + 1$ и могут быть построены за полиномиальное время.
+
+    Предположим, что имеется подмножество $A' \subseteq A$, такое, что: 
+    \begin{equation}
+        \sum_{a \in A'} s(a) = \sum_{a \in A' \backslash A} s(a)
+    \end{equation}
+    Тогда каждая из этиъ сумм должна быть равна $\frac{1}{2} sum_{a \in A} s(a) = 2 \sum^{k}_{i=1} s(a_i)$.
+    Также $s(b_1) + s(b_2) = 3 \left(\sum^{k}_{i=1} s(a) \right)$, значит одно из множеств $A'$ или 
+    $A' \backslash A$ содержит $b_1$ и не содержит $b_2$. Значит остальные элементы этого подмножества из $\{a_i: 1 \leq i \leq k \}$ и сумма их весов в точности равна $B$. Тогда, по сделанному ранее замечанию, этому подмножеству соответствует $M' \subseteq M$ являющееся решением задачи \textbf{3DM}. \\ 
+    Обратно, если задано покрытие $M' \subseteq M$, являющееся решением задачи \textbf{3DM}, то ${b_1} \cup {a_i:m_i \in M'}$ - искомое множество $A'$. \\
+    Утверждение даказано, и тем самым даказана теорема об \textbf{NP} - полноте задачи о расписании.
+
+
+
 
 \end{enumerate}
 \paragraph{\Large{Полиномиальное приближение\\\\}}
-\indent Найдем приближенное полиномиальное частного случай задачи об оптимальном рассписании, когда мощности всех машин одинаковы, то есть $p_{ij} = p_i$. \\ \\ 
+\indent Найдем полиномиальное приближенное решение для частного случая задачи об оптимальном рассписании, когда мощности всех машин одинаковы, то есть $p_{ij} = p_i$. \\ \\ 
 Рассмотрим алгоритм \textbf{LPTR} (Longest Processing Time Rule): \\
 \begin{enumerate}
     \item Отсортируем работы в порядке невозрастания сложности работы $p_i$, то есть так, что $p_i \geq p_{i+1} \quad \forall i$. 
