--- a/scheduling_problem.tex
+++ b/scheduling_problem.tex
@@ -142,6 +142,33 @@
                 \end{equation}
                 Что завершает доказательство. $\triangleright$
 
+\paragraph{\Large{Тесты\\\\}}
+Проверим работу алгоритма, рассмотрев несколько тестов. \\ 
+input:\\
+N = 6, M = 2, a = [2, 3 ,5, 2, 2, 2].\\
+output:\\
+W = 9; S = [0 1 0 1 0 1] $\neq$ OPT, OPT = 8, так как(5 + 3 = 2 + 2 + 2 + 2). \\ \\ 
+input: \\
+N = 10, M = 3, a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] \\
+output: \\
+W = 19; S = [2 2 1 0 0 1 2 2 1 0] - оптимальный ответ, т.к. OPT > $1/n \sum a_i$ = 18.33 >= 19 \\ \\ 
+input: \\
+N = 4, M = 2, a = [8 2 7 3] \\
+output:\\
+W = 10; S = [0 0 1 1] = W(OPT). \\ \\
+input: \\N = 10, M = 3, a = [1,2,3,4,5,6,7,8,9,10]\\
+output: \\
+W = 19 = W(OPT); S = [2 2 1 0 0 1 2 2 1 0]
+\\\\
+Сгенерируем большой случайный тест: \\
+input: \\
+N = 100, M = 3, a = $[81, 97, 64, 54, 72, 83, 0, 17, 44, 84, 59, 67, 58, 81, 94, 10, 62, 36, 52, 91, 0, 89, 97, 12, 60, 87, 54, 27, 18, 75, 79, 97, 84, 92, 89, 22, 70, 82, 12, 50, 23, 27, 73, 23, 56, 92, 61, 14, 90, 97, 23, 68, 57, 26, 87, 32, 40, 32, 13, 74, 64, 9, 35, 1, 21, 60, 55, 24, 75, 35, 47, 87, 1, 17, 5, 65, 68, 55, 8, 43, 70, 94, 42, 33, 40, 55, 86, 96, 26, 44, 13, 63, 94, 77, 98, 25, 19, 68, 15, 6]$
+output: \\ 
+W = 1750, S = [2 2 0 2 0 1 2 0 2 2 1 0 2 0 2 2 2 0 0 2 2 1 1 1 0 2 2 2 2 0 0 2 1 1 0 1 2 2 0 1 2 1 1 0 1 0 1 1 2 1 2 1 2 2 1 0 2 2 2 2 2 0 1 1 0 0 1 1 1 1 1 0 2 0 1 2 0 0 0 0 2 1 1 0 2 0 0 0 1 0 1 1 0 1 0 0 1 1 2 2], \\
+$1/3 \sum a_i = 1749.66 \implies W(\text{OPT}) >= 1750 \implies W = W(\text{OPT}).$ \\ 
+На случайных данных алгоритм работает хорошо и с большой вероятностью дает точное решение.
+
+
 \paragraph{\Large{Список литературы\\\\}}
 \begin{itemize}
  \item $[1]$ http://research.microsoft.com/en-us/um/people/dechakr/Courses/CO454/Lectures/lecture12.pdf
